css/poolpol.css
@import url(http://awebfont.ir/css?id=1116&mode=wletso);

html {
	direction: rtl;
	font-family: 'B Yekan';
	font-size: 16px;
}

.greenify {
	color: forestgreen;
}

.bluify {
	color: #29B6F6;
}

.q-info {
	font-size: 1.2rem;
}

.container {
	margin-left: auto;
	margin-right: auto;
	display: block;
	position: relative;
	/* Actual position is given via setContainerPos in poolpol.js */
}

.q-navigate {
	font-size: 1.3rem;
}

.divider {
	width: 80% !important;
	margin-left: auto !important;
	margin-right: auto !important;
}

